--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,4 +1,4 @@
-.feature-section__title {
+.feature__title {
     margin-bottom: 10px;
     color: var(--primary-text-color);
     text-decoration: none;
@@ -9,14 +9,14 @@
     text-transform: uppercase;
 }
 
-.feature-section__content {
+.feature__content {
     color: var(--paragrapg-contacts-color);
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
 }
 
-.feature-section__box {
+.feature__box {
     margin-bottom: 30px;
     background: #f5f4fa;
     border-radius: 4px;
@@ -27,15 +27,15 @@
     align-items: center;
 }
 
-.feature-section__icon {
+.feature__icon {
     width: 70px;
     height: 70px;
 }
 
-.feature-section__list {
+.feature__list {
     display: flex;
 }
 
-.feature-section__list .feature-section__item+.feature-section__item {
+.feature__list .feature__item+.feature__item {
     margin-left: 30px;
 }
