--- a/sass/components/_patron.scss
+++ b/sass/components/_patron.scss
@@ -1,5 +1,5 @@
 @import "../utils/animations";
-.patron-section__heading {
+.patron__heading {
     margin-bottom: 50px;
 
     text-align: center;
@@ -12,34 +12,34 @@
     color: var(--primary-text-color);
 }
 
-.patron-section__list {
+.patron {
     display: flex;
 
-    &>.patron-section__item {
+    &>.patron__item {
         margin-right: 30px;
     }
     
-    &>.patron-section__item:last-child {
+    &>.patron__item:last-child {
         margin-right: 0;
     }
 }
 
-.patron-section__item {
+.patron__item {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.patron-section__picture {
+.patron__picture {
     padding: 16px 32px;
 }
 
-.patron-section__icon {
+.patron__icon {
     width: 106px;
     height: 60px;
 }
 
-.patron-section__link {
+.patron__link {
     display: flex;
     justify-content: center;
     align-items: center;
