--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,12 +1,12 @@
-.team-section {
-    background-color: var(--team-section-background);
+.section--other_bcg {
+    background-color: var(--team-background);
 }
 
-.team-section__list {
+.team {
     display: flex;
 }
 
-.team-section__heading {
+.section__title {
     margin-bottom: var(--common-margin-gap);
     color: var(--primary-text-color);
     text-decoration: none;
@@ -17,7 +17,7 @@
     letter-spacing: 0.03em;
 }
 
-.team-section__item {
+.team__item {
     background-color: var(--hero-accent-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -25,16 +25,12 @@
     width: 270px;
 }
 
-.team-section__list .team-section__item+.team-section__item {
-    margin-left: 30px;
-}
-
-.team-section__footer {
+.team__box {
     padding: 30px 0;
     text-align: center;
 }
 
-.team-section__name {
+.team__name {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.2;
@@ -42,7 +38,7 @@
     color: var(--primary-text-color);
 }
 
-.team-section__position {
+.team__position {
     margin-top: 10px;
 
     font-weight: 400;
@@ -50,4 +46,8 @@
     line-height: 1.2;
     letter-spacing: 0.03em;
     color: var(--paragrapg-contacts-color);
+}
+
+.team .team__item+.team__item {
+    margin-left: 30px;
 }
