Finish on header mobile menu and navigation

--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,6 +1,9 @@
 @import "../utils/animations";
 .contacts {
+  
     display: flex;
+    display: none;
+
     margin-left: auto;
     color: var(--paragrapg-contacts-color);
 }
