--- a/css/main.css
+++ b/css/main.css
@@ -69,11 +69,27 @@ textarea {
 }
 
 .container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-right: auto;
+  max-width: 480px;
+  padding-left: 30px;
+  padding-right: 30px;
   margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding-left: 39px;
+    padding-right: 39px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .logo {
@@ -87,6 +103,15 @@ textarea {
 
 .page-header {
   border-bottom: 1px solid #ececec;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .page-header {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
 }
 
 .page-header__container {
@@ -94,8 +119,98 @@ textarea {
   align-items: center;
 }
 
+@media screen and (max-width: 767px) {
+  .page-header__container {
+    justify-content: space-between;
+  }
+}
+
 .logo__web {
   color: var(--title-accent-color);
+}
+
+.menu-btn {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  width: 44px;
+  height: 44px;
+  background-color: transparent;
+  border: transparent;
+  outline: transparent;
+  z-index: 99;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-btn {
+    display: none;
+  }
+}
+
+.menu-btn__icon {
+  width: 44px;
+  height: 44px;
+}
+
+.menu-btn__icon-open {
+  opacity: 1;
+  fill: var(--primary-text-color);
+}
+
+.menu-btn__icon-close {
+  opacity: 0;
+  fill: var(--primary-text-color);
+}
+
+.menu-btn.is-active .menu-btn__icon-open {
+  opacity: 0;
+}
+
+.menu-btn.is-active .menu-btn__icon-close {
+  opacity: 1;
+}
+
+.mobile-overlay {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10;
+  transform: translateX(100%);
+  visibility: hidden;
+  pointer-events: none;
+  transition: transform var(--anim-slow);
+}
+
+.mobile-overlay.is-open {
+  transform: translateX(0);
+  visibility: visible;
+  pointer-events: initial;
+}
+
+.mobile-menu {
+  width: 100%;
+  height: 100%;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 40px;
+  background-color: #fff;
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .mobile-menu {
+    margin-left: auto;
+  }
+}
+
+.mobile-nav {
+  margin-bottom: 64px;
+}
+
+.mobile-menu__contacts {
+  margin-bottom: 64px;
 }
 
 .navigation__link {
@@ -726,6 +841,7 @@ textarea {
 
 .contacts {
   display: flex;
+  display: none;
   margin-left: auto;
   color: var(--paragrapg-contacts-color);
 }
