--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,10 +1,21 @@
 .page-header {
     border-bottom: 1px solid #ececec;
-}
+    padding-top: 16px;
+    padding-bottom: 16px;
 
-.page-header__container {
-    display: flex;
-    align-items: center;
+    @media screen and (min-width: 768px) {
+        padding-top: 26px;
+        padding-bottom: 26px;
+    }
+    
+    &__container {
+        display: flex;
+        align-items: center;
+    
+        @media screen and (max-width: 767px) {
+            justify-content: space-between;
+        }
+    }
 }
 
 .logo__web {
