--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,13 @@
 @import "./utils/variables";
 @import "./base/base";
 @import "./base/reset";
+@import "./utils/mixins";
 @import "./utils/visually-hidden";
 @import "./components/container";
 @import "./components/logo";
 @import "./components/page-header";
+@import "./components/mobile-menu-btn";
+@import "./components/mobile-menu";
 @import "./components/navigation";
 @import "./components/hero";
 @import "./components/modal";
